k3s/apps/minio/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  labels:
    app: minio
spec:
  type: ClusterIP
  selector:
    app: minio
  ports:
    - name: http
      port: 9000
      targetPort: http
    - name: console
      port: 9001
      targetPort: console
